--- a/W2 Data Exploration - Tiffany Feng.ipynb
+++ b/W2 Data Exploration - Tiffany Feng.ipynb
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read in the data (our shapefile)\n",
-    "firestation = gpd.read_file('Data/l.a. county fire dept. station area.shp')"
+    "firestation = gpd.read_file('Data/firestations/l.a. county fire dept. station area.shp')"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "geopandas.geodataframe.GeoDataFrame"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
